# fuckapt.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
fuckapt/: __init__.py  __main__.py  dpkg.py  machinery.py
fuckapt/apt/: get.py
