[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fuckapt"
authors = [{name = "KOLANICH"}]
description = "A library to work with apt and dpkg"
readme = "ReadMe.md"
keywords = ["apt", "dpkg"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/prebuilder/fuckapt.py"}
requires-python = ">=3.4"
dependencies = [
	"sh @ git+https://github.com/amoffat/sh.git",
	"plumbum @ git+https://github.com/tomerfiliba/plumbum.git",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["fuckapt"]

[tool.setuptools_scm]
