[metadata]
name = fuckapt
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/fuckapt.py
description = A library to work with apt and dpkg
long_description = file: ReadMe.md
keywords = apt, dpkg
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = fuckapt
install_requires =
	sh @ git+https://github.com/amoffat/sh.git
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git

setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests.Tests

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
